--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>frontend-test</title>
 
-<link rel="stylesheet" href="/dist/app.css">
+<link rel="stylesheet" href="/dist/css/app.css">
 </head>
 
 <body>
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-<script src="/dist/app.js"></script>
+<script src="/dist/js/app.js"></script>
 
 </body>
 </html>
