--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+          
         <router-link class="navbar-brand" :to="{ name: 'home'}">
-          {{ app.name }}
+          <span v-cloak>{{ app.name }}</span>
         </router-link>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li>
+          <li v-cloak>
             <router-link :to="{ name: 'home'}">
               home
             </router-link>
@@ -37,20 +38,22 @@
 
   <div class="container-fluid" >
     <div class="row">
-      
-      <div class="col-sm-3 sidebar">
+      <aside class="col-sm-3 sidebar">
         <h2>Users</h2>
         <ul class="nav nav-sidebar">
-           <li class="active" v-cloak>
-            <router-link  to="/">{{ user.name }}</router-link>
+           <li class="active">
+            <router-link  to="/">
+              <span v-cloak>
+                {{ user.name }}
+              </span>
+            </router-link>
           </li>
         </ul>
-      </div>
+      </aside>
 
-      <div class="col-sm-9 main">
+      <section class="col-sm-9 main">
        <router-view :user="user" :api="api"></router-view>
-      </div>
-
+      </section>
     </div>
   </div>
 </div>
