--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </aside>
 
       <section class="col-sm-9 main">
-       <router-view :user="user"></router-view>
+       <router-view :user="user" :api="api"></router-view>
       </section>
     </div>
   </div>
